[B]Version 1.0.4 - 18 Dec 2016[/B]
- Modify Yodesi scraper to display shows list

[B]Version 1.0.3 - 17 Dec 2016[/B]
- Add Apna View
- Fix Run Tamil New movies
- Fix MovieFK Hindi movies
- Fix Search caching
- Add Multipart Indications in video sources

[B]Version 1.0.2 - 11 Dec 2016[/B]
- Add Desi Tashan

[B]Version 1.0.1 - 07 Dec 2016[/B]
- Add Tamil Radio

[B]Version 1.0.0 - 06 Dec 2016[/B]
- Total rewrite of the addon
- Not relying on external frameworks
- Used BeautifulSoup3 instead of 4 due to Android issues
- Modular with scraper plugins

[B]Version 0.3.9 - 20 Nov 2016[/B]
- Live Malayalam fix
- MovieFK Fix
- MovieFisher Fix

[B]Version 0.3.8 - 13 Nov 2016[/B]
- TamilGun fix

[B]Version 0.3.7 - 5 Nov 2016[/B]
- Mersalaayitten fix
- Runtamil Fix
- ThiruttuVCDs fix

[B]Version 0.3.6 - 28 Oct 2016[/B]
- Mersalaayitten fix
- Categories in Live Malayalam TV

[B]Version 0.3.5 - 11 Oct 2016[/B]
- Make Kodi 15 compatible
- Make Tamilyogi Scraper compatible on Android

[B]Version 0.3.4 - 10 Oct 2016[/B]
- Fix APKLand Scraper

[B]Version 0.3.3 - 5 Oct 2016[/B]
- Fix MovieFisher Scraper
- Fix Mersalaayitten Scraper
- Fix APKLand scraper


[B]Version 0.3.2 - 1 Oct 2016[/B]
- Fix Olangal Scraper
- Fix ABCMalayalam Scraper
- Get ready for Krypton by removing TLS1.2 binary modules
- Filmlinks4u scraper will now work only on Krypton Beta 2 or above

[B]Version 0.3.1 - 27 Sep 2016[/B]
- Option in settings to diable unwanted scrapers
- TamilYogi, New Scraper
- Tamil Catchup TV fixes
- ThiruttuVCD TV Show fixes
- RunTamil fixes
- APKLand Live TV fixes

[B]Version 0.3.0 - 19 Sep 2016[/B]
- Tamil Catchup TV added

[B]Version 0.2.9 - 18 Sep 2016[/B]
- YoDesi Catchup TV added
- Remove bundled html5lib and six

[B]Version 0.2.8 - 6 Sep 2016[/B]
- Malayalam Live TV added
- Moviefisher Domain change


[B]Version 0.2.7 - 4 Sep 2016[/B]
- APKLand Tamil Live TV added
- Tamilgun Domain change
- New site Thiruttuvcds

[B]Version 0.2.6 - 20 Aug 2016[/B]