@@ -1,3 +1,6 @@
+[B]Version 1.0.5 - 21 Dec 2016[/B]
+- Add Abroad India Live TV
+
 [B]Version 1.0.4 - 18 Dec 2016[/B]
 - Modify Yodesi scraper to display shows list
 
